--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -8,3 +8,10 @@
     align-items: center;
     float:right;
 }
+
+.my-radio {
+    padding: 2.5px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    margin-right: 5px;
+}
